# VulkanRenderer

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  VulkanLearning.sln  VulkanLearning.vcxproj  VulkanLearning.vcxproj.filters  imgui.ini  index.html  main.cpp  run_debug.bat  run_release.bat
.cursor/rules/: vulkan-core-standards.mdc  vulkan-cpp-code.mdc  vulkan-shader-code.mdc
.cursor/skills/vulkan-development/: SKILL.md  reference.md
app/include/Configs/: AppConfig.h  RuntimeConfig.h
app/include/ECS/: ECS.h
app/include/ECS/component/: Component.h  MeshComponent.h  TransformComponent.h
app/include/ECS/core/: Scene.h
app/include/ECS/entity/: Entity.h
app/include/ECS/system/: CullingSystem.h
app/include/Engine/Camera/: Camera.h
app/include/Engine/Events/: EventBus.h  Events.h
app/include/Engine/Math/: BoundingBox.h  Frustum.h  GlmConfig.h
app/include/ImGuiIntegration/: ImGuiContext.h
app/include/Rendering/RHI/Vulkan/: RayTracingContext.h  SwapChain.h  VulkanContext.h  VulkanResourceCreator.h  VulkanTypes.h
app/include/Rendering/animation/: AnimationPlayer.h
app/include/Rendering/core/: FrameManager.h  ImageResource.h  RenderPass.h  RenderTarget.h  Rendergraph.h
app/include/Rendering/ibl/: EquirectToCubemap.h  IblPrecompute.h
app/include/Rendering/mesh/: GlobalMeshBuffer.h  GpuMesh.h
app/include/Rendering/pass/: BloomBlurPass.h  BloomExtractPass.h  DepthPrepass.h  ForwardPass.h  OcclusionCullingPass.h  RtaoComputePass.h  SkyboxPass.h  TonemapBloomPass.h
app/include/Rendering/pipeline/: DepthPrepassPipeline.h  GraphicsPipeline.h  OcclusionPipeline.h  PostProcessPipeline.h  RtaoComputePipeline.h  SkyboxPipeline.h
app/include/Rendering/renderer/: Renderer.h
app/include/Resource/core/: Resource.h  ResourceHandle.h  ResourceManager.h
app/include/Resource/model/: Animation.h  GltfTexture.h  Material.h  Mesh.h  Model.h  Node.h  Skin.h  Vertex.h
app/include/Resource/model/loaders/: GltfModelLoader.h  IModelLoader.h  ObjModelLoader.h
app/include/Resource/shader/: Shader.h
app/include/Resource/texture/: HdrTextureLoader.h  KtxTextureLoader.h  Texture.h
app/include/Runtime/: VulkanApplication.h
app/src/ECS/component/: Component.cpp
app/src/ECS/core/: Scene.cpp
app/src/ECS/entity/: Entity.cpp
app/src/ECS/system/: CullingSystem.cpp
app/src/Engine/Camera/: Camera.cpp
app/src/Engine/Events/: EventBus.cpp
app/src/ImGuiIntegration/: ImGuiContext.cpp
app/src/Rendering/RHI/Vulkan/: RayTracingContext.cpp  SwapChain.cpp  VulkanContext.cpp  VulkanResourceCreator.cpp
app/src/Rendering/animation/: AnimationPlayer.cpp
app/src/Rendering/core/: FrameManager.cpp  RenderPass.cpp  RenderTarget.cpp  Rendergraph.cpp
app/src/Rendering/ibl/: EquirectToCubemap.cpp  IblPrecompute.cpp
app/src/Rendering/mesh/: GlobalMeshBuffer.cpp  GpuMesh.cpp
app/src/Rendering/pass/: BloomBlurPass.cpp  BloomExtractPass.cpp  DepthPrepass.cpp  ForwardPass.cpp  OcclusionCullingPass.cpp  RtaoComputePass.cpp  SkyboxPass.cpp  TonemapBloomPass.cpp
app/src/Rendering/pipeline/: DepthPrepassPipeline.cpp  GraphicsPipeline.cpp  OcclusionPipeline.cpp  PostProcessPipeline.cpp  RtaoComputePipeline.cpp  SkyboxPipeline.cpp
app/src/Rendering/renderer/: Renderer.cpp
app/src/Resource/core/: Resource.cpp  ResourceManager.cpp
app/src/Resource/model/: Model.cpp
app/src/Resource/model/loaders/: GltfModelLoader.cpp  ObjModelLoader.cpp
app/src/Resource/shader/: Shader.cpp
app/src/Resource/texture/: HdrTextureLoader.cpp  KtxTextureLoader.cpp  Texture.cpp
app/src/Runtime/: VulkanApplication.cpp
assets/references/: core.txt
assets/shaders/CompShaders/: rtao_atrous.comp  rtao_atrous.comp.spv  rtao_trace_half.comp  rtao_trace_half.comp.spv  rtao_upsample.comp  rtao_upsample.comp.spv
assets/shaders/FragShaders/: bloom_blur.frag  bloom_blur.frag.spv  bloom_extract.frag  bloom_extract.frag.spv  brdf_integrate.frag  brdf_integrate.frag.spv  depth_only.frag  depth_only.frag.spv  equirect_to_cubemap.frag  equirect_to_cubemap.frag.spv  irradiance_convolution.frag  irradiance_convolution.frag.spv  pbr.frag  pbr.frag.spv  prefilter.frag  prefilter.frag.spv  rtao_blur.frag.spv  skybox.frag  skybox.frag.spv  tonemap_bloom.frag  tonemap_bloom.frag.spv
assets/shaders/VertShaders/: brdf_quad.vert  brdf_quad.vert.spv  cubemap_capture.vert  cubemap_capture.vert.spv  depth_prepass.vert  depth_prepass.vert.spv  fullscreen.vert  fullscreen.vert.spv  occlusion_bounds.vert  occlusion_bounds.vert.spv  pbr.vert  pbr.vert.spv  prefilter_capture.vert  prefilter_capture.vert.spv  skybox.vert  skybox.vert.spv
docs/: CPU_PERFORMANCE_ANALYSIS.md  GPU_DRIVEN_RENDERING_DESIGN.md  IBL_RUNTIME_PRECOMPUTE.md
scripts/: clangd_with_msvc_env.bat  cmake_with_msvc_env.bat  compile.bat  convert_textures_to_ktx2.bat  run_with_msvc_env.ps1
